--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<div class="paper">
 			<div class="water-colour-gif"></div>
 		</div>
-		
 	</div>
 
-	<div class="container main-text">
+	 <div class="main-text">
+	 	<div class="container">
 		<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
 
 		<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
@@ -41,6 +41,9 @@
 		<h2>Курсы рисования в Минске для взрослых.</h2>
 		<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
 	</div>
+	 </div>
+
+	
 
 
 
@@ -78,6 +81,7 @@
 		  <path  id="letter-si" fill="none" stroke="#020202" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M430.038 92.4461c4.37953,0.390945 5.82283,-3.64843 3.98386,-3.77835 -1.08071,-0.0779528 -5.02795,0.270472 -7.90157,4.07717 -2.87244,3.80551 -2.38701,6.13819 0.933071,6.90354 8.55472,1.97008 16.8567,-8.09646 19.1445,-8.88071 0.179528,-0.0614173 -7.23898,4.47874 -5.97047,7.24016 1.2685,2.76142 7.5,-1.51181 9.25394,-3.69449 1.75394,-2.18268 3.22795,-3.7689 3.22795,-3.7689 -9.70984,9.62717 0.564567,12.1028 9.90945,4.36535"/>
     </svg>
 </div>
+<div class="under-animation"></div>
 
 
 </body>
