--- a/index.html
+++ b/index.html
@@ -17,30 +17,111 @@
 
 	 <div class="main-text">
 	 	<div class="container">
-		<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
+			<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
 
-		<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
-		<p>Здесь, под руководством опытных преподавателей, Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
-		<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
-		<p>Традиционно, мы предлагаем посетить первый урок рисования в Минске бесплатно. Звоните, приходите, Вам понравится!</p>
+			<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
+			<p>Здесь, под руководством опытных преподавателей, Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
+			<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
+			<p>Традиционно, мы предлагаем посетить первый урок рисования в Минске бесплатно. Звоните, приходите, Вам понравится!</p>
 
-		<h2>Курсы академического рисунка в Минске.</h2>
-		<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
+			<h3>Курсы академического рисунка в Минске.</h2>
+			<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
 
-		<h2>Курсы живописи.</h2>
-		<p> Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
-		<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
+			<h3>Курсы живописи.</h2>
+			<p> Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
+			<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
 
-		<h2>Курсы скульптуры.</h2>
-		<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
+			<h3>Курсы скульптуры.</h2>
+			<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
 
-		<h2>Курсы рисования в Минске для начинающих.</h2>
-		<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
-		<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
+			<h3>Курсы рисования в Минске для начинающих.</h2>
+			<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
+			<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
 
-		<h2>Курсы рисования в Минске для взрослых.</h2>
-		<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
-	</div>
+			<h3>Курсы рисования в Минске для взрослых.</h2>
+			<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
+		</div>
+	 </div>
+
+	 <div class="courses">
+	 	<div class="container">
+	 		<h2>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h2>
+
+			<div class="course-card">
+				<div class="course-image">
+					<img src="images/academ-risunok.jpg" alt="Курсы по академическому рисунку в Минске, подготовка к поступлению">
+				</div>
+				<div class="course-description">
+					<h3 class="course-header">
+						Академический рисунок для поступающих.
+					</h1>
+					<div class="course-about">
+						<p>Курсы подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академический рисунок"</p>
+						<p>Подростковая группа (14-18 лет).</p>
+					</div>
+					<div class="course-price">
+						<p>цена 100 руб/мес</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="course-card">
+				<div class="course-image">
+					<img src="images/academ-risunok-vzr.jpg" alt="Курсы по академическому рисунку по программе академии искусств">
+				</div>
+				<div class="course-description">
+					<h3 class="course-header">
+						Академический рисунок.
+					</h1>
+					<div class="course-about">
+						<p>Занятия проходят по программе, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными навыками в рисунке.</p>
+						<p>Взрослая группа (от 18 лет)</p>
+					</div>
+					<div class="course-price">
+						<p>цена 120 руб/мес</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="course-card">
+				<div class="course-image">
+					<img src="images/academ-jivopis.jpg" alt="Курсы по академичеcкой живописи в Минске. Подготовка к поступлению.">
+				</div>
+				<div class="course-description">
+					<h3 class="course-header">
+						Академическая живопись для поступающих.
+					</h1>
+					<div class="course-about">
+						<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академическая живопись"</p>
+						<p>Подростковая группа (14-18 лет)</p>
+					</div>
+					<div class="course-price">
+						<p>цена 100 руб/мес</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="course-card">
+				<div class="course-image">
+					<img src="images/academ-jivopis-vzr.jpg" alt="Курсы по академичеcкой живописи в Минске">
+				</div>
+				<div class="course-description">
+					<h3 class="course-header">
+						Академическая живопись.
+					</h1>
+					<div class="course-about">
+						<p>Занятия проходят в соответствии с программой, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными техниками и навыками в живописи.</p>
+						<p>Взрослая группа (от 18 лет)</p>
+					</div>
+					<div class="course-price">
+						<p>цена 100 руб/мес</p>
+					</div>
+				</div>
+			</div>
+
+
+
+	 	</div>
 	 </div>
 
 	
