--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
 
 			<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
-			<p>Здесь, под руководством опытных преподавателей, Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
+			<p> <img class="studia" src="images/anatomy.jpg" alt="студия Акварель"> Здесь, под руководством опытных преподавателей, Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
 			<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
 			<p>Традиционно, мы предлагаем посетить первый урок рисования в Минске бесплатно. Звоните, приходите, Вам понравится!</p>
 
@@ -28,7 +28,7 @@
 			<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
 
 			<h3>Курсы живописи.</h2>
-			<p> Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
+			<p> <img class="jivo" src="images/anatomy.jpg" alt="студия Акварель"> Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
 			<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
 
 			<h3>Курсы скульптуры.</h2>
@@ -46,75 +46,186 @@
 	 <div class="courses">
 	 	<div class="container">
 	 		<h2>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h2>
+		
+			<div class="courses-list">
 
-			<div class="course-card">
-				<div class="course-image">
-					<img src="images/academ-risunok.jpg" alt="Курсы по академическому рисунку в Минске, подготовка к поступлению">
-				</div>
-				<div class="course-description">
-					<h3 class="course-header">
-						Академический рисунок для поступающих.
-					</h1>
-					<div class="course-about">
-						<p>Курсы подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академический рисунок"</p>
-						<p>Подростковая группа (14-18 лет).</p>
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/academ-risunok.jpg" alt="Курсы по академическому рисунку в Минске, подготовка к поступлению">
 					</div>
-					<div class="course-price">
-						<p>цена 100 руб/мес</p>
+					<div class="course-description">
+						<h3 class="course-header">
+							Академический рисунок для поступающих.
+						</h3>
+						<div class="course-about">
+							<p>Курсы подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академический рисунок"</p>
+							<p>Подростковая группа (14-18 лет).</p>
+						</div>
+						<div class="course-price">
+							<p>цена 100 руб/мес</p>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="course-card">
-				<div class="course-image">
-					<img src="images/academ-risunok-vzr.jpg" alt="Курсы по академическому рисунку по программе академии искусств">
-				</div>
-				<div class="course-description">
-					<h3 class="course-header">
-						Академический рисунок.
-					</h1>
-					<div class="course-about">
-						<p>Занятия проходят по программе, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными навыками в рисунке.</p>
-						<p>Взрослая группа (от 18 лет)</p>
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/academ-risunok-vzr.jpg" alt="Курсы по академическому рисунку по программе академии искусств">
 					</div>
-					<div class="course-price">
-						<p>цена 120 руб/мес</p>
+					<div class="course-description">
+						<h3 class="course-header">
+							Академический рисунок.
+						</h3>
+						<div class="course-about">
+							<p>Занятия проходят по программе, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными навыками в рисунке.</p>
+							<p>Взрослая группа (от 18 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 120 руб/мес</p>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="course-card">
-				<div class="course-image">
-					<img src="images/academ-jivopis.jpg" alt="Курсы по академичеcкой живописи в Минске. Подготовка к поступлению.">
-				</div>
-				<div class="course-description">
-					<h3 class="course-header">
-						Академическая живопись для поступающих.
-					</h1>
-					<div class="course-about">
-						<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академическая живопись"</p>
-						<p>Подростковая группа (14-18 лет)</p>
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/academ-jivopis.jpg" alt="Курсы по академичеcкой живописи в Минске. Подготовка к поступлению.">
 					</div>
-					<div class="course-price">
-						<p>цена 100 руб/мес</p>
+					<div class="course-description">
+						<h3 class="course-header">
+							Академическая живопись для поступающих.
+						</h3>
+						<div class="course-about">
+							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академическая живопись"</p>
+							<p>Подростковая группа (14-18 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 100 руб/мес</p>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="course-card">
-				<div class="course-image">
-					<img src="images/academ-jivopis-vzr.jpg" alt="Курсы по академичеcкой живописи в Минске">
-				</div>
-				<div class="course-description">
-					<h3 class="course-header">
-						Академическая живопись.
-					</h1>
-					<div class="course-about">
-						<p>Занятия проходят в соответствии с программой, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными техниками и навыками в живописи.</p>
-						<p>Взрослая группа (от 18 лет)</p>
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/academ-jivopis-vzr.jpg" alt="Курсы по академичеcкой живописи в Минске">
 					</div>
-					<div class="course-price">
-						<p>цена 100 руб/мес</p>
+					<div class="course-description">
+						<h3 class="course-header">
+							Академическая живопись.
+						</h3>
+						<div class="course-about">
+							<p>Занятия проходят в соответствии с программой, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными техниками и навыками в живописи.</p>
+							<p>Взрослая группа (от 18 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 120 руб/мес</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/sculpting.jpg" alt="Курсы по скульптуре. Подготовка к поступлению.">
+					</div>
+					<div class="course-description">
+						<h3 class="course-header">
+							Скульптура для поступающих.
+						</h3>
+						<div class="course-about">
+							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Скульптура"</p>
+							<p>Подростковая группа (14-18 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 150 руб/мес</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/sculpting-project.jpg" alt="Курсы по скульптуре. Индивидуальные занятия.">
+					</div>
+					<div class="course-description">
+						<h3 class="course-header">
+							Интерьерная скульптура. Индивидуальные занятия.
+						</h3>
+						<div class="course-about">
+							<p>Курс по интерьерной скульптуре для любого уровня подготовки. Полное выполнение одного проекта от штрихов до отливки в материал (гипс). Стоимость материала включена в стоимость.</p>
+							<p>Взрослая группа (от 18 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 300 руб/курс</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/anatomy.jpg" alt="Курсы по пластической анатомии в Минске.">
+					</div>
+					<div class="course-description">
+						<h3 class="course-header">
+							Пластическая анатомия для художников.
+						</h3>
+						<div class="course-about">
+							<p>Курс по изучению пластической анатомии, групп мышц, образующих рельеф и пластику тела. Без этих знаний невозможно грамотно изобразить человеческую натуру. Курс длится 2 месяца.</p>
+							<p>Взрослая группа (от 18 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 390 руб/курс</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/coloristic.jpg" alt="Курсы по цветоведению и композиции в Минске.">
+					</div>
+					<div class="course-description">
+						<h3 class="course-header">
+							Цветоведение и композиция.
+						</h3>
+						<div class="course-about">
+							<p>Теория цвета, гармония цвета, психология цвета, основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1,5 месяца.</p>
+							<p>Взрослые и подростки (от 14 лет)</p>
+						</div>
+						<div class="course-price">
+							<p>цена 150 руб/курс</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/illustration.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
+					</div>
+					<div class="course-description">
+						<h3 class="course-header">
+							Иллюстрация для новичков.
+						</h3>
+						<div class="course-about">
+							<p>Иллюстрация для начального уровня. </p>
+							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
+						</div>
+						<div class="course-price">
+							<p>цена ХЗ руб/курс</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="course-card">
+					<div class="course-image">
+						<img src="images/illustration-pro.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
+					</div>
+					<div class="course-description">
+						<h3 class="course-header">
+							Иллюстрация ПРОФИ.
+						</h3>
+						<div class="course-about">
+							<p>Иллюстрация для профессионалов. </p>
+							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
+						</div>
+						<div class="course-price">
+							<p>цена ХЗ руб/курс</p>
+						</div>
 					</div>
 				</div>
 			</div>
