--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</div>
 
 	<section class="main-text">
-	 	<div class="container">
+	 	<div class="container main-text-content">
 
 			<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
 			<p>  Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное - атмосфера и системность знаний, и соответстенный результат (тут по-подробнее)</p>
@@ -81,6 +81,7 @@
 			<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
 
 		</div>
+		<canvas id="canvas-basic"></canvas>
 	 </section>
 
 	 <section class="courses">
@@ -269,13 +270,10 @@
 					</div>
 				</div>
 			</div>
-
-
-
 	 	</div>
-	 </section>
+	</section>
 
-	
+
 
 
 
@@ -296,7 +294,12 @@
 <!-- ScrollMagic GreenSock Plugin -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 
+	
+	<script src="https://cdn.rawgit.com/sarcadass/granim.js/master/dist/granim.min.js"></script>
     <script src="js/main.js"></script>
+
+
+
 
 </body>
 </html>
