maps added and scripts without cdn

--- a/index.html
+++ b/index.html
@@ -273,10 +273,20 @@
 	 	</div>
 	</section>
 
+	<section class="find-us">
 
 
 
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/uS4eDDe3pVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/LvX8KUD-3BQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+		<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="3p[;[/40" frameborder="0"></iframe>
+
+<!-- GOOGLE MAP -->
+<!-- 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.015277365151!2d27.475572859221096!3d53.91370442797141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc539ff97d167%3A0x18a4e25a6c4ce367!2z0YPQu9C40YbQsCDQnNCw0YLRg9GB0LXQstC40YfQsCAyMywg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1532163852443" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+	
+	</section>
 
 
 
@@ -284,18 +294,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-
-<!-- GreenSock TweenMax -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
-
-<!-- ScrollMagic CSSRulePlugin -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/CSSRulePlugin.min.js"></script>
-
-<!-- ScrollMagic GreenSock Plugin -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
-
-	
 	<script src="https://cdn.rawgit.com/sarcadass/granim.js/master/dist/granim.min.js"></script>
+
+
     <script src="js/main.js"></script>
 
 
