section Main text finished

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 				<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
 			</div>
 
+			<div class="main-img-3">
+				<img src="images/main-room.jpg" alt="На студии Акварель идут занятия - готовим поступать">
+			</div>
+			<div class="main-img-4">
+				<img src="images/main-exit.jpg" alt="Зелень вокруг - студия Акварель">
+			</div>
+			<div class="main-img-5">
+				<img src="images/main-lib.jpg" alt="книжная полка на студии Акварель">
+			</div>
+
 
 			<div class="main-block-3">
 				<h3>Курсы рисования в Минске для начинающих.</h2>
@@ -94,6 +104,10 @@
 
 				<h3>Курсы рисования в Минске для взрослых.</h2>
 				<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
+			</div>
+
+			<div class="main-img-6">
+				<img src="images/main-lady.jpg" alt="ученик-живописец и её работа">
 			</div>
 
 
