teachers section added

--- a/index.html
+++ b/index.html
@@ -320,22 +320,48 @@
 	</section>
 
 	<section class="teachers">
-		<div class="natasha">
-			Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.
-			Скульптор, художник, преподавательский опыт 6 лет.
-			Опыт преподавания - : 6 лет (Рисунок, скульптура, анатомия)
-		</div>
-		<div class="nastya">
-			Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.
-			Дизайнер, флорист, художник. 
-			Опыт преподавания - 4 года.(Академическая живопись, академический рисунок)
-		</div>
-		<div class="yana">
-			Образование: МГХУ им. А.К.Глебова, Белорусский Государственный педагогический университет.
-			Хужожник - иллюстратор.
-			Опыт преподавания - 2 года (Живопись, анатомия, цветоведение, иллюстрация).
+		<div class="balls"></div>
+			<div class="container">
+			<h2>Наши преподаватели.</h2>
+			<div class="teacher-photo photo-down">
+				<img src="images/girls-down-1.png" alt="">
+			</div>
+			<div class="teacher-photo photo-up">
+				<img src="images/girls-up-1.png" alt="">
+			</div>
+				<div class="description">
+					<div class="natasha teacher">
+						<div class="name">Наташа</div>
+						<div class="about-teacher">
+							Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
+							Скульптор, художник.<br>
+							Опыт преподавания - : 6 лет. (Рисунок, скульптура, анатомия)
+						</div>
+						
+					</div>
+					<div class="nastya teacher">
+						<div class="name">Настя</div>
+						<div class="about-teacher">
+							Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
+							Дизайнер, флорист, художник. <br>
+							Опыт преподавания - 4 года. (Академическая живопись, академический рисунок)
+						</div>
 
-		</div>
+					</div>
+					<div class="yana teacher">
+						<div class="name">Яна</div>
+						<div class="about-teacher">
+							Образование: МГХУ им. А.К.Глебова, Белорусский Государственный педагогический университет.<br>
+							Хужожник - иллюстратор.<br>
+							Опыт преподавания - 2 года. (Живопись, анатомия, цветоведение, иллюстрация).
+						</div>
+						
+					</div>
+				</div>
+			</div>
+		
+		
+		
 	</section>
 
 	<section class="find-us" id="particles-js">
@@ -345,16 +371,16 @@
 			<div class="ways-to-studio">
 				<div class="way">
 					<h4>Дорога в студию от перекрёстка Матусевича - Глебки (за 1 минуту)</h4>
-					<iframe width="320" height="180" src="https://www.youtube.com/embed/uS4eDDe3pVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<!-- <iframe width="320" height="180" src="https://www.youtube.com/embed/uS4eDDe3pVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 				</div>
 				<div class="way">
 					<h4>Дорога в студию от станции метро СПОРТИВНАЯ (за 1,5 минуты)</h4>
-					<iframe width="320" height="180" src="https://www.youtube.com/embed/LvX8KUD-3BQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<!-- 	<iframe width="320" height="180" src="https://www.youtube.com/embed/LvX8KUD-3BQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 				</div>
 			</div>
 		</div>
 		<div class="for-map">
-			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="250px" frameborder="0"></iframe>
+	<!-- 		<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="250px" frameborder="0"></iframe> -->
 		</div>
 		
 <!-- GOOGLE MAP -->
