--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cтудия Акварель - самая уютная школа рисования в Минске.</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#a1fcff">
+
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=El+Messiri" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/style-gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/elastislide.css" />
+
+	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+
 </head>
 <body>
 	<div class="header">
@@ -116,7 +125,7 @@
 				<h3>Наши перимущества:</h3>
 				<ul>
 					<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
-					<li>Удобно добираться (5 мин) от стануции метро "Спортивная".</li>
+					<li>Удобно добираться (5 мин) от станции метро "Спортивная".</li>
 					<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
 					<li>Индивидуальный подход (Начать можно в любое время, без оглядки на остальных).</li>
 					<li>Мы распологаем шикарной подборкой учебной литературы.</li>
@@ -294,7 +303,7 @@
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
 						</div>
 						<div class="course-price">
-							<p>цена ХЗ руб/курс</p>
+							<p>цена 320 руб/курс</p>
 						</div>
 					</div>
 				</div>
@@ -312,7 +321,7 @@
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
 						</div>
 						<div class="course-price">
-							<p>цена ХЗ руб/курс</p>
+							<p>цена 240 руб/курс</p>
 						</div>
 					</div>
 				</div>
@@ -430,7 +439,10 @@
 			</div>
 		</div>
 		<div class="for-map">
-			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="250px" frameborder="0"></iframe>
+			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="300px" frameborder="0"></iframe>
+		</div>
+		<div class="unp">
+			ИП Домбровская - УНП 193072191
 		</div>
 <!-- GOOGLE MAP -->
 <!-- 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.015277365151!2d27.475572859221096!3d53.91370442797141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc539ff97d167%3A0x18a4e25a6c4ce367!2z0YPQu9C40YbQsCDQnNCw0YLRg9GB0LXQstC40YfQsCAyMywg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1532163852443" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
